objects/pse__Proj__c.object
<CustomObject>
    <customHelpPage>pse__ProjectHelp</customHelpPage>
    <description>Represents a collection of business transactions, activities, and related items to be managed over a defined time range, such as timecards, expenses, milestones, and budgets. Typically, people (represented by Resource records) are assigned to projects, though some projects do not require assignments in order to be staffed. Projects may also have a master project (parent) or a sub project (child) in the project hierarchy, supporting roll-ups of revenues, costs, and time to every project and up through the hierarchy.</description>
    <fields>
        <fullName>Account_Coordinator_Email__c</fullName>
        <description>Created as part of DPS-17412</description>
        <label>Account Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Coordinator_Name__c</fullName>
        <description>Created as part of DPS-17412</description>
        <label>Account Coordinator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <description>Created as part of DPS-15982</description>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <description>Created as part of DPS-20628</description>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <description>Created as part of DPS-20628</description>
        <label>Customer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Milestone_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Number of Milestones on the Project. Not editable by users.</inlineHelpText>
        <label>Milestone Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Scope__c</fullName>
        <formula>IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Accounting CS&quot;),&quot;Accounting CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;AdvanceFlow&quot;),&quot;AdvanceFlow;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Audit Methodology&quot;),&quot;Audit Methodology;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Checkpoint - A&amp;A&quot;),&quot;Checkpoint - A&amp;A;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Checkpoint Edge&quot;),&quot;Checkpoint Edge;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Checkpoint Engage&quot;),&quot;Checkpoint Engage;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Checkpoint Integration&quot;),&quot;Checkpoint Integration;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Checkpoint - Tax&quot;),&quot;Checkpoint - Tax;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Confirmation&quot;),&quot;Confirmation;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;eLearning&quot;),&quot;eLearning;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;FileCabinet CS&quot;),&quot;FileCabinet CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;FirmFlow&quot;),&quot;FirmFlow;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Fixed Assets&quot;),&quot;Fixed Assets;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;GoFileRoom&quot;),&quot;GoFileRoom;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;GoSystem Tax RS&quot;),&quot;GoSystem Tax RS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;INFLO&quot;),&quot;INFLO;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;K1 Analyzer&quot;),&quot;K1 Analyzer;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Learn Live&quot;),&quot;Learn Live;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;NetClient CS&quot;),&quot;NetClient CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Onboarding&quot;),&quot;Onboarding;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Onvio Doc &amp; Client Center&quot;),&quot;Onvio Doc &amp; Client Center;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Onvio Firm Management&quot;),&quot;Onvio Firm Management;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Onvio Tax&quot;),&quot;Onvio Tax;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Onvio Workpapers&quot;),&quot;Onvio Workpapers;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Optimization - Product&quot;),&quot;Optimization - Product;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Optimization - Workflow&quot;),&quot;Optimization - Workflow;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Payroll CS&quot;),&quot;Payroll CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Planner CS&quot;),&quot;Planner CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Practice CS&quot;),&quot;Practice CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Practice Forward&quot;),&quot;Practice Forward;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;SMART Practice Aids&quot;),&quot;SMART Practice Aids;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Tax Methodology&quot;),&quot;Tax Methodology;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Technical Services&quot;),&quot;Technical Services;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK Digita Suite&quot;),&quot;UK Digita Suite;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK DVO&quot;),&quot;UK DVO;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK Installation Services&quot;),&quot;UK Installation Services;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK Onvio Integrated&quot;),&quot;UK Onvio Integrated;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK Onvio Standalone&quot;),&quot;UK Onvio Standalone;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK SQL&quot;),&quot;UK SQL;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UK Training&quot;),&quot;UK Training;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;UltraTax CS&quot;),&quot;UltraTax CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Web Builder CS&quot;),&quot;Web Builder CS;&quot;,&apos;&apos;)&amp;
IF(INCLUDES(TR_PS_Enterprise_Product_Scope__c,&quot;Workpapers CS&quot;),&quot;Workpapers CS;&quot;,&apos;&apos;)</formula>
        <label>Product Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_Alias__c</fullName>
        <description>Alias Name of the Project</description>
        <inlineHelpText>Alias Name of the Project</inlineHelpText>
        <label>Project Name Alias</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_comments__c</fullName>
        <label>Project Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <formula>TEXT(MONTH( TR_PS_Response_Date__c ))+&quot;/&quot; +TEXT(DAY( TR_PS_Response_Date__c ))+&quot;/&quot; +TEXT(YEAR(TR_PS_Response_Date__c ))</formula>
        <label>Response_Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Total__c</fullName>
        <description>Created as part of DPS-16701</description>
        <label>Retail Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Status__c</fullName>
        <formula>TEXT(Order__r.APTS_SAP_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <description>Created as part of DPS-15981</description>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <description>Created as part of DPS-15981</description>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_PS_Enterprise_Product_Scope__c</fullName>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting CS</fullName>
                </value>
                <value>
                    <fullName>AdvanceFlow</fullName>
                </value>
                <value>
                    <fullName>Audit Methodology</fullName>
                </value>
                <value>
                    <fullName>AuditWatch</fullName>
                </value>
                <value>
                    <fullName>Business Workflow</fullName>
                </value>
                <value>
                    <fullName>Checkpoint - A&amp;A</fullName>
                </value>
                <value>
                    <fullName>Checkpoint Edge</fullName>
                </value>
                <value>
                    <fullName>Checkpoint Engage</fullName>
                </value>
                <value>
                    <fullName>Checkpoint Integration</fullName>
                </value>
                <value>
                    <fullName>Checkpoint - Tax</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>eLearning</fullName>
                </value>
                <value>
                    <fullName>FileCabinet CS</fullName>
                </value>
                <value>
                    <fullName>FirmFlow</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>GoFileRoom</fullName>
                </value>
                <value>
                    <fullName>GoSystem Tax RS</fullName>
                </value>
                <value>
                    <fullName>INFLO</fullName>
                </value>
                <value>
                    <fullName>K1 Analyzer</fullName>
                </value>
                <value>
                    <fullName>Learn Live</fullName>
                </value>
                <value>
                    <fullName>NetClient CS</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Onvio Doc &amp; Client Center</fullName>
                </value>
                <value>
                    <fullName>Onvio Firm Management</fullName>
                </value>
                <value>
                    <fullName>Onvio Tax</fullName>
                </value>
                <value>
                    <fullName>Onvio Workpapers</fullName>
                </value>
                <value>
                    <fullName>Optimization - Product</fullName>
                </value>
                <value>
                    <fullName>Optimization - Workflow</fullName>
                </value>
                <value>
                    <fullName>Payroll CS</fullName>
                </value>
                <value>
                    <fullName>Planner CS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR_PS_Enterprise_Project_Account_Id__c</fullName>
        <label>Project Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_PS_Enterprise_Project_Account_Name__c</fullName>
        <label>Project Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_PS_Enterprise_Project_Task_Count__c</fullName>
        <inlineHelpText>Total number of project task under a project . not editable by user</inlineHelpText>
        <label>Project Task Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR_PS_Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the related account for the project. Enter the customer account for the project, unless you are using it to track items other than revenue such as vacations or internal non-billable projects.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Action_Count_Billing_Eligible_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</description>
        <inlineHelpText>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</inlineHelpText>
        <label>Action: Count Billing Eligible Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether project values within the current time period are to be updated when you next save the project. Use this checkbox to update project values after changing the Project Time Period field</inlineHelpText>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Recalc_Date__c</fullName>
        <inlineHelpText>The date actuals were last recalculated for the project.</inlineHelpText>
        <label>Actuals: Last Recalc Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <inlineHelpText>the date and time actuals were last updated for the project.</inlineHelpText>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the related user for the last update date.</inlineHelpText>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Need_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether project actuals need to be re-calculated for the project.</inlineHelpText>
        <label>Actuals: Need Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Add_BEIs_To_Existing_Batches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</description>
        <inlineHelpText>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</inlineHelpText>
        <label>Add BEIs To Existing Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Alert_Threshold__c</fullName>
        <description>Triggers an email when Percentage Used equals or exceeds the percentage value entered. Apply Billing Cap must be selected and there must also be a contact in the Alert Recipient field.</description>
        <inlineHelpText>Enter the threshold percentage that will trigger an email when the value in the Percentage Used field equals or exceeds this value. You must also select Apply Billing Cap and select a contact from the Alert Recipient field.</inlineHelpText>
        <label>Alert Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Expenses_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</description>
        <inlineHelpText>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</inlineHelpText>
        <label>Allow Expenses Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Self_Staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether a resource may create an assignment to this project for his/her own resource. Checking this will allow any and all resources in the system to create assignments to this project.</inlineHelpText>
        <label>Allow Self-Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Timecards_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then Timecards may be logged for this project without the Resource on the Timecard needing to have an open and current Assignment for the Project.  Such projects are typically called &quot;Global&quot; projects - e.g. Vacation, Sick Leave, Maternity/Paternity Leave.</description>
        <inlineHelpText>If this field is checked, then Timecards may be logged for this project without the Resource on the Timecard needing to have an open and current Assignment for the Project.</inlineHelpText>
        <label>Allow Timecards Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Apply_Billing_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger an email when the project billings total is over a threshold percentage of its bookings total. There must be a contact in the Alert Recipient field and there must also be a value in the Alert Threshold field.</description>
        <inlineHelpText>Select to enable email alerts when project billings and pre-billed total equals or exceeds a percentage of its bookings total, represented by the Alert Threshold. You must select a contact from the Alert Recipient field and enter Alert Threshold value</inlineHelpText>
        <label>Apply Billing Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Apply_Spend_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger an email when the project billings total is over a threshold percentage of its bookings total. There must be an email address in the Alert Recipient field and there must also be a value in the Alert Threshold field.</description>
        <inlineHelpText>Select to enable email alerts when project billings total equals or exceeds percentage of its bookings total, represented by the value in Alert Threshold. You must specify an email address in Alert Recipient and enter a value in Alert Threshold.</inlineHelpText>
        <label>Deprecated:Apply Spend Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Auto_Cap_Project_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox on a project layout that is used to stop the release of billing events that exceed the project&apos;s billing cap, if applied.</description>
        <inlineHelpText>If you have applied a billing cap to this project, select this to stop the release of billing events that exceed its value. This prevents overbilling.</inlineHelpText>
        <label>Auto-Cap Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Update_Date__c</fullName>
        <inlineHelpText>Date on which the Backlog fields were last updated.</inlineHelpText>
        <label>Backlog: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the user who made the last change to the Backlog fields</inlineHelpText>
        <label>Backlog: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_End_Date__c</fullName>
        <description>End date recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End date recorded on the project baseline.</inlineHelpText>
        <label>Baseline End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Project_Phase__c</fullName>
        <description>Project phase recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Project_Phase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project phase recorded on the project baseline.</inlineHelpText>
        <label>Baseline Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Project_Status__c</fullName>
        <description>Project status recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Project_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project status recorded on the project baseline.</inlineHelpText>
        <label>Baseline Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Stage__c</fullName>
        <description>Stage recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stage recorded on the project baseline.</inlineHelpText>
        <label>Baseline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Start_Date__c</fullName>
        <description>Start date recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start date recorded on the project baseline.</inlineHelpText>
        <label>Baseline Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Baseline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Baseline version of this project.</description>
        <inlineHelpText>Baseline version of this project.</inlineHelpText>
        <label>Baseline</label>
        <referenceTo>pse__VersionItem_ProjectDetail__c</referenceTo>
        <relationshipLabel>Baseline</relationshipLabel>
        <relationshipName>Baseline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <formula>VALUE(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>Used for reliable sorting of projects so a large collection of projects can be split into batches.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expense_Fee_Flat__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Flat fee in Project currency by which to increase the billable amount of any Expense logged for the Project.  The calculation will apply any percentage expense fee*before* this flat expense fee amount.</description>
        <inlineHelpText>Flat fee in Project currency by which to increase the billable amount of any Expense logged for the Project.  The calculation will apply any percentage expense fee*before* this flat expense fee amount.</inlineHelpText>
        <label>Billable Expense Fee Flat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expense_Fee_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</description>
        <inlineHelpText>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</inlineHelpText>
        <label>Billable Expense Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Included in utilization calculation.</inlineHelpText>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Included in utilization calculation.</inlineHelpText>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Sum of billed amounts. Expenses, timecard splits and miscellaneous adjustments that are billable contribute to billed revenue after they are billed/invoiced. Milestones contribute to billed and invoiced revenue after they are billed/invoiced.</inlineHelpText>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Budgets__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Budgets</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Expenses that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Expenses that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Expenses</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Last_Updated__c</fullName>
        <description>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</description>
        <inlineHelpText>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</inlineHelpText>
        <label>Billing Eligible Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Milestones that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Milestones that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Milestones</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Misc_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Miscellaneous Adjustments that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Miscellaneous Adjustments that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Misc Adjustments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Timecard_Splits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Timecard Splits that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Timecard Splits that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Timecard Splits</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Queues_Need_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether billing queues need to be re-calculated for the project.</inlineHelpText>
        <label>Billing Queues Need Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Type__c</fullName>
        <inlineHelpText>Type of billing, such as Fixed Price or Time and Materials. A Time and Materials project tracks hours entered by resources with assignment and schedules as the main method of billing.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                    <default>true</default>
                    <label>Fixed Price</label>
                </value>
                <value>
                    <fullName>Time and Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Sum of ready-to-bill revenue from timecards, milestones, and miscellaneous adjustments.</inlineHelpText>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Booked revenue for this project. Budgets of type Customer PO and Customer PO Change Order contribute to bookings.</inlineHelpText>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this project is closed for expense entry.</inlineHelpText>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this project is closed for timecard entry.</inlineHelpText>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>